fixed button positioning in firefox, deleted css selection with absolute position, and now parent container is responsible for positioning button (cell-align-end selector).

--- a/src/views/Give/give.scss
+++ b/src/views/Give/give.scss
@@ -199,10 +199,9 @@
 }
 
 .ohm-card {
-  .redeem-button {
-    position: absolute;
-    right: 2.5em;
-    bottom: 2em;
+  .cell-align-end {
+    display: flex;
+    justify-content: flex-end;
   }
 
   .MuiTypography-body2 {
